--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ android {
 }
 
 dependencies {
-
+    // Fragment KTX 모듈 추가
+    implementation("androidx.fragment:fragment-ktx:1.4.1")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
