[REFACTOR] 패키지 구조 변경 및 데이터, 뷰모델 클래스 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JointSeminarMelon">
         <activity
-            android:name=".presentation.PostingActivity"
+            android:name=".presentation.posting.PostingActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
