--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,20 @@ android {
 
 dependencies {
 
+    //retrofit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    //retrofit2에서 gson 사용을 위한 컨버터
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    //gson
+    implementation "com.google.code.gson:gson:2.9.0"
+
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
